--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Alexandre Oliveira",
-  "license": "ISC"
+  "author": "Alexandre Azevedo Oliveira",
+  "license": "ISC"  
 }
