--- a/stocks-crafting-vue/package.json
+++ b/stocks-crafting-vue/package.json
@@ -8,10 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.15.0",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "jquery": "^3.5.1",
+    "multer": "^1.4.2",
     "vue": "^2.6.11",
     "vue-router": "^3.3.4"
   },
