--- a/stocks-crafting-vue/package.json
+++ b/stocks-crafting-vue/package.json
@@ -13,9 +13,12 @@
     "bootstrap-vue": "^2.15.0",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
+    "mongoose": "^5.10.1",
     "multer": "^1.4.2",
+    "mysql": "^2.18.1",
     "vue": "^2.6.11",
     "vue-router": "^3.3.4"
   },
